<?xml version="1.0"?>
<package format="3">
  <name>realsense_octomap</name>
  <version>0.0.1</version>
  <description>Pacote para integrar a câmera RealSense D435i com OctoMap</description>
  <maintainer email="antonione@gmail.com">anonione</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>octomap_server</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>realsense2_camera</depend>  <!-- Adicionando driver da câmera RealSense -->
  
  <!-- Dependências de teste -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
